# TaskSchedX

./: .gitignore  CMakeLists.txt  CodeCoverage.cmake  Doxyfile.in  LICENSE  README.md
.github/workflows/: ci.yml
examples/BasicUsage/: BasicUsage.cpp
examples/CallbackMechanism/: CallbackMechanism.cpp
examples/CustomSchedulingPolicies/: CustomSchedulingPolicies.cpp
examples/ErrorHandling/: ErrorHandling.cpp
examples/PerformanceBenchmark/: PerformanceBenchmark.cpp
examples/PriorityScheduling/: PriorityScheduling.cpp
examples/ProgressUpdates/: ProgressUpdates.cpp
examples/RepeatableTasks/: RepeatableTasks.cpp
examples/StatisticsMonitoring/: StatisticsMonitoring.cpp
examples/TaskCancellation/: TaskCancellation.cpp
examples/TimeoutHandling/: TimeoutHandling.cpp
include/: Logger.h  Task.h  TaskQueue.h  TaskScheduler.h  ThreadPool.h
src/: Logger.cpp  Task.cpp  TaskQueue.cpp  TaskScheduler.cpp  ThreadPool.cpp
tests/: CMakeLists.txt  IntegrationTest.cpp  LoggerTest.cpp  TaskQueueTest.cpp  TaskSchedulerTest.cpp  TaskTest.cpp  ThreadPoolTest.cpp
